modified eda and modeling, and .gitignore

--- a/project_2_modeling.ipynb
+++ b/project_2_modeling.ipynb
@@ -97,10 +97,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 177,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# establishing features and target\n",
     "\n",
@@ -803,6 +801,19 @@
     "X, y = model_df_all.drop(['china_total_gross', 'log_china_total_gross', 'movie_title'],axis=1), model_df_all['china_total_gross']\n",
     "\n",
     "X_train, X_holdout, y_train, y_holdout = train_test_split(X, y, test_size=.2, random_state=17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SCALING NOTE: THIS IS THE CORRECT WAY!!\n",
+    "\n",
+    "# s = StandardScaler()\n",
+    "# X_train_scaled = s.fit_transform(X_train)\n",
+    "# X_holdout_scaled = s.transform(X_holdout)"
    ]
   },
   {
@@ -1649,9 +1660,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'StandardScaler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-38a85ba4b177>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# scaling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX_train_scaled2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX_holdout_scaled2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_holdout2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'StandardScaler' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# scaling\n",
     "\n",
@@ -2147,7 +2170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
